k8s-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-qa-service
  namespace: pharmacy-qa
spec:
  selector:
    app: pharmacy-qa
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
